--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "^0.17.5"
+    "react-native-web": "^0.17.5",
+    "@react-native-community/datetimepicker": "3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
